[gd_scene load_steps=10 format=2]

[ext_resource path="res://Hitbox.tscn" type="PackedScene" id=1]
[ext_resource path="res://enemies/Enemy.gd" type="Script" id=2]
[ext_resource path="res://textures/Enemies.png" type="Texture" id=3]
[ext_resource path="res://enemies/AxeKnight.gd" type="Script" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 11, 16 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 3 )
region = Rect2( 48, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 3 )
region = Rect2( 80, 64, 32, 32 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 3.8
} ]

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 37, 89.5 )

[node name="AxeKnight" type="KinematicBody2D" groups=["AffectedByClock", "AffectedByRosary"]]
collision_layer = 8
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Enemy" type="Node" parent="."]
script = ExtResource( 2 )
enemyName = "Axe Knight"
damage = 4
points = 1400
weakHits = 10
strongHits = 9
hitbox = NodePath("../Hitbox")
hitSound = 1
drop = "bigHeart"

[node name="Hitbox" parent="." instance=ExtResource( 1 )]
position = Vector2( -5, 0 )
collision_mask = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2( 5, 0 )
shape = SubResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( -5, 0 )
rect = Rect2( -6, -16, 22, 32 )

[node name="Sprite" type="Node2D" parent="."]

[node name="AnimatedSprite" type="AnimatedSprite" parent="Sprite"]
position = Vector2( -5, 0 )
frames = SubResource( 4 )
playing = true

[node name="ThrowTop" type="Position2D" parent="Sprite/AnimatedSprite"]
position = Vector2( 0, -10 )

[node name="ThrowBottom" type="Position2D" parent="Sprite/AnimatedSprite"]
position = Vector2( 0, 9 )

[node name="SimonTooClose" type="Area2D" parent="Sprite/AnimatedSprite"]
collision_layer = 32
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite/AnimatedSprite/SimonTooClose"]
position = Vector2( -27, 4.5 )
shape = SubResource( 5 )

[node name="FloorDetectRear" type="RayCast2D" parent="Sprite/AnimatedSprite"]
position = Vector2( 16, 0 )
enabled = true
cast_to = Vector2( 0, 18 )

[node name="FloorDetectFront" type="RayCast2D" parent="Sprite/AnimatedSprite"]
position = Vector2( -6, 0 )
enabled = true
cast_to = Vector2( 0, 18 )

[node name="MoveTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="ShootTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered" flags=6]
[connection signal="timeout" from="ShootTimer" to="." method="_on_ShootTimer_timeout"]
